Added Login & Register form

--- a/AbayMVC/AbayMVC/Views/Home/Index.cshtml
+++ b/AbayMVC/AbayMVC/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApp_Abay_MVC.Models.Category>
+﻿@model IEnumerable<AbayMVC.Models.Category>
 
 @{
     ViewBag.Title = "Welcome on Auction Bay";
