--- a/AbayMVC/AbayMVC/Views/Shared/_Layout.cshtml
+++ b/AbayMVC/AbayMVC/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         </span>
                     </li>
                 </ul>
-
+                @Html.Partial("_LoginPartial")
             </div>
 
         </div>
