--- a/AbayMVC/AbayMVC/Views/Account/Login.cshtml
+++ b/AbayMVC/AbayMVC/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
-﻿@using AbayMVC.Models
-@model AccountViewModel
+﻿@model AbayMVC.Models.AccountViewModel
+
 @{
     ViewBag.Title = "Log in";
 }
@@ -11,7 +11,6 @@
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -28,7 +27,7 @@
                         @Html.ValidationMessageFor(m => m.Account.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                @ViewBag.Error
+
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Log in" class="btn btn-default" />
@@ -37,7 +36,7 @@
                 <p>
                     @Html.ActionLink("Register as a new user", "Register")
                 </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
+                @* TODO : Password forgot
                     <p>
                         @Html.ActionLink("Forgot your password?", "ForgotPassword")
                     </p>*@
