--- a/AbayDC/MainWindow.xaml
+++ b/AbayDC/MainWindow.xaml
@@ -5,8 +5,85 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DedicatedClient"
         mc:Ignorable="d"
-        Title="Admin" Height="800" Width="1000">
-    <StackPanel>
-        
-    </StackPanel>
+        Title="Admin" Height="500" Width="1000" ResizeMode="NoResize">
+    <Window.Resources>
+        <Style x:Key="HeaderStyle" TargetType="Label">
+            <Setter Property="FontWeight" Value="Bold" />
+        </Style>
+    </Window.Resources>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <DataGrid Grid.Column="0"
+                      Name="dgItems" ItemsSource="{Binding}" AutoGenerateColumns="False"
+                      IsReadOnly="True" CanUserAddRows="False" CanUserDeleteRows="False"
+                      SelectionMode="Single" SelectionUnit="FullRow" SelectionChanged="dgItems_SelectionChanged" FontSize="14">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Item No." Binding="{Binding Id}"/>
+                <DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
+                <DataGridTextColumn Header="Category" Binding="{Binding Category.Name}"/>
+                <DataGridTextColumn Header="Seller" Binding="{Binding SellerUser.UserName}"/>
+                <DataGridCheckBoxColumn Header="Sold" Binding="{Binding State}"/>
+                <DataGridTextColumn Header="Start Date" Binding="{Binding StartDate}"/>
+                <DataGridTextColumn Header="End Date" Binding="{Binding EndDate}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="80"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="80"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Row="1" Grid.Column="0" Content="Item No." FontWeight="Bold" FontSize="14"/>
+            <Label Grid.Row="1" Grid.Column="1" Name="lblId" Content="-" FontStyle="Italic" FontSize="14"/>
+            <Label Grid.Row="1" Grid.Column="2" Content="Category" FontWeight="Bold" FontSize="14"/>
+            <Label Grid.Row="1" Grid.Column="3" Name="lblCategory" Content="-" FontStyle="Italic" FontSize="14"/>
+            <Label Grid.Row="2" Grid.Column="0" Content="Name" FontWeight="Bold" FontSize="14"/>
+            <TextBox Grid.Row="2" Grid.Column="1" Name="txtName" Text="-" FontStyle="Italic" FontSize="14" Grid.ColumnSpan="3" BorderBrush="{x:Null}"/>
+            <Label Grid.Row="3" Grid.Column="0" Content="Describe" FontWeight="Bold" FontSize="14" />
+            <TextBox Grid.Row="3" Grid.Column="1" Name="txtDescribe" Text="-" FontStyle="Italic" FontSize="14" Grid.ColumnSpan="3" Grid.RowSpan="2" BorderBrush="{x:Null}"/>
+            <Label Grid.Row="5" Grid.Column="0" Content="Start Date" FontWeight="Bold" FontSize="14" />
+            <Label Grid.Row="5" Grid.Column="1" Name="lblStartDate" Content="-" FontStyle="Italic" FontSize="14"/>
+            <Label Grid.Row="5" Grid.Column="2" Content="End Date" FontWeight="Bold" FontSize="14"/>
+            <Label Grid.Row="5" Grid.Column="4" Name="lblEndDate" Content="-" FontStyle="Italic" FontSize="14"/>
+            <Label Grid.Row="6" Grid.Column="0" Content="Seller" FontWeight="Bold" FontSize="14"/>
+            <Label Grid.Row="6" Grid.Column="1" Name="lblSeller" Content="-" FontStyle="Italic" FontSize="14"/>
+            <Label Grid.Row="6" Grid.Column="2" Content="Sold" FontWeight="Bold" FontSize="14"/>
+            <CheckBox Grid.Row="6" Grid.Column="4" Name="chkSold" IsChecked="False" VerticalAlignment="Center"/>
+            <Label Grid.Row="8" Grid.Column="0" Content="Bids" FontWeight="Bold" FontSize="14" Grid.ColumnSpan="4"/>
+            <Grid Grid.Row="14" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Center" Margin="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="10"/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="10"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0" Name="btnUpdate" Content="Update" Width="80" Click="btnUpdate_Click"/>
+                <Button Grid.Column="2" Name="btnDelete" Content="Delete" Width="80" Click="btnDelete_Click"/>
+                <Button Grid.Column="4" Name="btnCancel" Content="Cancel" Width="80" Click="btnCancel_Click"/>
+            </Grid>
+        </Grid>
+    </Grid>
 </Window>
