--- a/AbayDC/LoginWindow.xaml
+++ b/AbayDC/LoginWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="DedicatedCliend.LoginWindow"
+﻿<Window x:Class="DedicatedClient.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DedicatedCliend"
+        xmlns:local="clr-namespace:DedicatedClient"
         mc:Ignorable="d"
         Title="LoginWindow" Height="200" Width="300" ResizeMode="NoResize">
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
