humongous async changings

--- a/AbayMVC/AbayMVC/Views/Home/Index.cshtml
+++ b/AbayMVC/AbayMVC/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AbayMVC.Models.Category>
+﻿@model IEnumerable<AbayMVC.ItemServiceReference.ItemCategory>
 
 @{
     ViewBag.Title = "Welcome on Auction Bay";
