--- a/AbayMVC/AbayMVC/Views/Item/Sell.cshtml
+++ b/AbayMVC/AbayMVC/Views/Item/Sell.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AbayMVC.Models.Category>
+﻿@model IEnumerable<AbayMVC.ItemServiceReference.ItemCategory>
 
 @{
     ViewBag.Title = "Sell an item";
