--- a/AbayMVC/AbayMVC/Content/abay-Design.css
+++ b/AbayMVC/AbayMVC/Content/abay-Design.css
@@ -301,3 +301,12 @@ span#demo {
     color: #B12704;
     font-weight: bold;
 }
+
+/* LISTING */
+
+.listing-img {
+    border: 1px solid #ddd; /* Gray border */
+    border-radius: 4px; /* Rounded border */
+    padding: 5px; /* Some padding */
+    width: 150px; /* Set a small width */
+}
